experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/LinearSearch.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/LinearSearch/LinearSearch.java:8: error: An identifier with private visibility may not be used in a assignable clause with public visibility
      @ assignable location;
                   ^
1 error
1 warning
